# native_tamplate

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: native_tamplate.dart  native_tamplate_bindings_generated.dart  native_template.dart  native_template_bindings_generated.dart
src/: CMakeLists.txt  native_math.cpp  native_math.h  native_tamplate.c
windows/: CMakeLists.txt
